--- a/styles/pages/justice/dashboard/_home.scss
+++ b/styles/pages/justice/dashboard/_home.scss
@@ -372,78 +372,60 @@
   }
 
   @media (max-width: 768px) {
-    display: block;
-    // width: 100vw;
-
+    grid-template-columns: 1fr;
     &__card1 {
-      padding: 24px;
-
+padding: 20px;
       &__stats {
-        gap: 16px;
+        gap: 8px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
 
         &__card {
-          width: 166.5px;
-          height: 129px;
+          width: 100%;
+          padding: 16px 20px;
+          height: 140px;
 
           &__subtitle-group {
-            display: flex;
-            flex-direction: column;
-            gap: 16px;
+         & >:first-child {
+          font-size: 20px;
+         }
+         & >:last-child {
+          font-size: 12px;
+
+         }
           }
+
         }
       }
 
       &__agency-stats {
-        gap: 16px;
-
+        gap: 8px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
         &__card {
-          width: 166.425px;
-          height: 86px;
-          padding: 18px;
+          width: 100%;
+          padding: 18px 20px;
 
           &__title-group {
-            gap: 8px;
             font-size: 12px;
-            margin-bottom: 10px;
-
-            .agencies-img {
-              width: 22px;
-              height: 22px;
-            }
           }
-
           &__subtitle {
-            font-size: 16px;
+            color: #1c1c1c;
+            font-size: 24px;
+            font-weight: 600;
           }
         }
+        &__card-max {
+        width: 100%;
+        }
       }
-    }
 
+      
+    }
     &__card2 {
+      // display: none;
     }
   }
 
-  @media (max-width: 390px) {
-    &__card1 {
-      padding: 18px;
-
-      &__stats {
-        gap: 12px;
-      }
-    }
-  }
-
-  @media (max-width: 375px) {
-    &__card1 {
-      padding: 14px;
-
-      &__stats {
-        gap: 8px;
-      }
-
-      &__agency-stats {
-        gap: 8px;
-      }
-    }
-  }
+  
 }
